# pmo-agentic-ai

./: .env.example  .gitignore  README.md  check_task5.py  docker-compose.yml  inspect_db.py  pyproject.toml  start_backend.py  test_llm_connectivity.py
.github/workflows/: ci.yml
agents/: artifact_critique_agent.py  charter_draft_agent.py  data_completeness_agent.py  executive_summary_agent.py  governance_validation_agent.py  raid_classification_merge_agent.py  raid_extraction_agent.py  service.py  status_summary_agent.py  supervisor.py  testing_agent.py
backend/: log_tail.txt  requirements.txt  test_models_ssl.py
backend/app/: main.py
backend/scripts/: finetune_lora.py  list_gemini_models.py
docs/: contributing.md  environment.md
docs/architecture/: overview.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
graph_runtime/: edges.py  graph.py  runtime.py  state.py
graph_runtime/nodes/: __init__.py  charter.py  common.py  raid.py  status_report.py  testing.py
prompts/: loader.py
prompts/templates/: artifact_critique_system.txt  artifact_critique_user.txt  charter_draft_system.txt  charter_draft_user.txt  data_completeness_system.txt  data_completeness_user.txt  exec_summary_user.txt  executive_summary_system.txt  executive_summary_user.txt  governance_validation_system.txt  raid_extraction_system.txt  raid_extraction_user.txt  raid_merge_system.txt  raid_merge_user.txt  repair_json_v1.txt  system_base_v1.txt  (+4 more)
retrieval/: ingestion.py  retriever.py
rules/: catalogue.py  engine.py
scripts/: run_local.ps1
(+30 files in other folders)
